tests/expectations/compiler/interfaces/abstract_and_external_same_name_valid.out
Warning [WPAR0370002]: Record prototype `Token` does not constrain any fields beyond the implicit `owner: address`. Consider simplifying to `record Token;`.
    --> compiler-test:5:1
     |
   5 | 
   6 |     record Token {
     |     ^^^^^^^^^^^^^^
   7 |         owner: address,
     |         ^^^^^^^^^^^^^^^
   8 |         ..
     |         ^^
   9 |     }
     |     ^
program other.aleo;

record Token:
    owner as address.private;

function dummy:
// --- Next Program --- //
import other.aleo;
program lib.aleo;

function dummy:
// --- Next Program --- //
import other.aleo;
import lib.aleo;
program test.aleo;

record Token:
    owner as address.private;

function abstract_transfer:
    input r0 as Token.record;
    cast r0.owner into r1 as Token.record;
    output r1 as Token.record;

function external_transfer:
    input r0 as other.aleo/Token.record;
    output r0 as other.aleo/Token.record;

function main:


---
Note: Treating dependencies as Aleo produces different results:

Error [ECHI03712000]: Interface `lib.aleo/HasMixed` not found.
    --> compiler-test:5:20
     |
   5 | program test.aleo: lib.aleo::HasMixed {
     |                    ^^^^^^^^^^^^^^^^^^
     |
     = Make sure the interface is defined in the current program or an imported program.
Warning [WPAR0370002]: Record prototype `Token` does not constrain any fields beyond the implicit `owner: address`. Consider simplifying to `record Token;`.
    --> compiler-test:5:1
     |
   5 | 
   6 |     record Token {
     |     ^^^^^^^^^^^^^^
   7 |         owner: address,
     |         ^^^^^^^^^^^^^^^
   8 |         ..
     |         ^^
   9 |     }
     |     ^
Warning [WPAR0370002]: Record prototype `Token` does not constrain any fields beyond the implicit `owner: address`. Consider simplifying to `record Token;`.
    --> compiler-test:5:1
     |
   5 | 
   6 |     record Token {
     |     ^^^^^^^^^^^^^^
   7 |         owner: address,
     |         ^^^^^^^^^^^^^^^
   8 |         ..
     |         ^^
   9 |     }
     |     ^
